// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test exam reducer should handle DISPLAY_SUBJECT_LIST 1`] = `
Object {
  "examModal": false,
  "exams": Array [
    Object {
      "_id": "ueeNxOkl32Ry2kGF",
      "createdAt": Object {
        "$$date": 1543663446602,
      },
      "date": "11/11/2019",
      "subjectId": "dh667zZh748JnNn",
      "title": "BIO EXAM",
      "updatedAt": Object {
        "$$date": 1548254413049,
      },
      "weight": 1,
    },
  ],
  "openClassDropdown": false,
  "openSubList": false,
  "selectedRoom": null,
  "selectedSubject": "Biology",
  "subject": "",
  "subjectId": "dh667zZh748JnNn",
}
`;

exports[`test exam reducer should handle GET_SELECTED_CLASS 1`] = `
Object {
  "subject": "Biology",
}
`;

exports[`test exam reducer should handle GET_SINGLE_EXAM 1`] = `
Object {
  "examId": "4rbNx3kl32Ry2kHF",
  "examModal": true,
  "openClassDropdown": false,
  "openSubList": false,
  "selectedRoom": null,
  "selectedSubject": null,
  "subject": "",
}
`;

exports[`test exam reducer should handle UPDATE_DROPDOWN_CLASS_LIST 1`] = `
Object {
  "examModal": false,
  "openClassDropdown": true,
  "openSubList": false,
  "selectedRoom": "Class 2",
  "selectedSubject": null,
  "subject": "",
}
`;

exports[`test exam reducer should handle UPDATE_EXAMS_LIST 1`] = `
Object {
  "examModal": false,
  "exams": Object {
    "exams": Array [
      Object {
        "_id": "ueeNxOkl32Ry2kGF",
        "createdAt": Object {
          "$$date": 1543663446602,
        },
        "date": "11/11/2019",
        "subjectId": "dh667zZh748JnNn",
        "title": "BIO EXAM",
        "updatedAt": Object {
          "$$date": 1548254413049,
        },
        "weight": 1,
      },
    ],
  },
  "openClassDropdown": false,
  "openSubList": false,
  "selectedRoom": null,
  "selectedSubject": null,
  "subject": "",
}
`;

exports[`test exam reducer should use initial state 1`] = `
Object {
  "examModal": false,
  "openClassDropdown": false,
  "openSubList": false,
  "selectedRoom": null,
  "selectedSubject": null,
  "subject": "",
}
`;
